# KI-agent-Bacheloroppgave-av-Glencore-Nikkelverk-AS

./: .env.example  .gitignore  AI-agent-Bachelor's thesis-by-Glencore-Nikkelverk-AS-Diagrams.qea  Diagrams.text  README.md  Timeliste.xlsx  editor.plantuml  pyproject.toml  tatus  temp_auth_guard_check.txt  temp_auth_guard_check2.txt  temp_auth_guard_check3.txt  temp_baseline_e2e.txt  temp_e2e_final.txt  temp_e2e_timeout_fix.txt  temp_e2e_verification.txt  temp_reindex_status_check.txt
.github/workflows/: manual-run.yml
backend/: README.md  README.txt  requirements.txt
backend/app/: main.py  pipeline.py  storage.py
backend/ki_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/scripts/: dev.ps1
backend/tests/: conftest.py  test_authz_documents.py  test_knowledge_chat_retrieval.py  test_revised_suggestion_toc_only.py  test_structuring_documents.py  test_viewer_read_only_access.py  test_workflow_apply_consistency.py
chapters file/: Methodology.tex  Solution Design and Implementation(1).tex  results.tex
databases/workflow/: README.md
docs/: 01-requirements.md  02-use-cases.md  03-data-model.md  04-workflow.md  05-runbook.md  06-vector-db.md  backend-api-contract-v1.md
docs/diagrams/: architecture-diagram.piml  class diagram.puml  data_flow_diagram.puml  retrieval_pipeline_diagram.puml  sequence diagrams.puml  use-case.puml  vector_db_overview.puml  work flow.puml
frontend/: ARCHITECTURE.md  ATTRIBUTIONS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: dev.ps1
(+129 files in other folders)
