[project]
name = "ki-agent"
version = "0.1.0"
description = "KI-agent + kunnskapsbank pipeline (MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-frontmatter>=1.1",
  "PyYAML>=6.0",
  "markdown>=3.6",
  "jinja2>=3.1",
  "rich>=13.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
vector = [
  "chromadb>=0.5",
]

[project.scripts]
ki-agent = "ki_agent.cli:app"

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
